<resources xmlns:android="http://schemas.android.com/apk/res/android">

    <string name="app_name">Shore Excursioneer Tickets</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="e_mail">E-mail</string>
    <string name="logButton">Search</string>
    <string name="mainText">Select the ticket you wish to see</string>
    <string name="downButton">Download Tickets</string>
    <string name="orderNumber">Order Number</string>
	<string name="textDownload">Download your available tickets</string>
	<string name="buttonMainBack">Back To Main Screen</string>
	<string name="wrongWarning">No results for this E-mail and order combination.</string>
	<string name="emptyWarning">Both Fields are Required</string>
	<string name="refresh">Refresh</string>
</resources>
