<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="25dp"
    android:orientation="vertical" >
        
    	<TextView
    	    android:layout_width="fill_parent"
    	    android:layout_height="wrap_content"
    	    android:layout_marginTop="25dip"
    	    android:text="@string/e_mail"
    	    android:textColor="#372c24"
    	    android:textSize="16sp" />
                
        <EditText android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip"
                android:layout_marginBottom="20dip"
                android:singleLine="true"
                android:inputType= "text"
                android:id="@+id/email"/>
                
           <TextView
               android:layout_width="fill_parent"
               android:layout_height="wrap_content"
               android:text="@string/orderNumber"
               android:textColor="#372c24"
               android:textSize="16sp" />
                
          <EditText
              android:id="@+id/orderCode"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:layout_marginTop="5dip"
              android:inputType="text"
              android:singleLine="true" />
	
          <TextView
              android:id="@+id/emptyWarning"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:gravity="center"
              android:text="@string/emptyWarning"
              android:textColor="#d00"
              android:textSize="16sp"
              android:visibility="gone" />
          
          <TextView
              android:id="@+id/wrongWarning"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:gravity="center"
              android:text="@string/wrongWarning"
              android:textColor="#d00"
              android:textSize="16sp"
              android:visibility="gone" />

          <Button
              android:id="@+id/buttonSearch"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              
              android:text="@string/logButton" />
     
</LinearLayout>
